--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>my 1st ever repo</title>
 </head>
 <body>
-    
+    <div>
+        <h3>mt 1st website</h3>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis, dicta voluptatum! Aliquam, quibusdam non, magnam iure corrupti consequatur vero in dolor necessitatibus illum minus quisquam sed tempore tenetur doloribus ex?
+    </div>
 </body>
 </html>
